--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Buy and sell used golf clubs through our dedicated auction platform">
-    <title>GolfClub Auctions - Home</title>
+    <title>GolfClub Auctions - Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
