--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1>⛳ GolfClub Auctions</h1>
+                <h1>GolfClub Auctions</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
@@ -27,9 +27,9 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <header class="hero">
-        <div class="hero-content">
+    <!-- Main Section -->
+    <header class="main">
+        <div class="main-content">
             <h2>Find Your Perfect Club</h2>
             <p>The premier marketplace for buying and selling used golf clubs</p>
             <button class="btn btn-large">Start Browsing</button>
@@ -63,7 +63,6 @@
                 <div class="auction-card">
                     <div class="card-image">
                         <img src="images/driver1.jpg" alt="TaylorMade Driver">
-                        <span class="badge">Ending Soon</span>
                     </div>
                     <div class="card-content">
                         <h4>TaylorMade R15 Driver</h4>
@@ -153,17 +152,6 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="footer-section">
-                    <h4>Follow Us</h4>
-                    <ul class="social-links">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Instagram</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 GolfClub Auctions. All rights reserved.</p>
             </div>
         </div>
     </footer>
