--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* Minimal custom styling to match brand colors */
+        /* Minimal custom styling - Bulma does the heavy lifting */
         .navbar {
             background-color: #2d5016 !important;
         }
         .hero.is-primary {
-            background: linear-gradient(rgba(45, 80, 22, 0.7), rgba(45, 80, 22, 0.7)),
-                        url('images/golf-course.jpg') center/cover;
             background-color: #2d5016;
         }
         .button.is-primary {
@@ -24,18 +22,16 @@
         .button.is-primary:hover {
             background-color: #3a6120;
         }
-        .cta-section {
-            background-color: #4a7c25;
-        }
         .footer {
             background-color: #2d5016;
         }
         .bid-price {
             color: #4a7c25;
             font-weight: bold;
+            font-size: 1.25rem;
         }
-        .time-remaining {
-            color: #e74c3c;
+        .box:hover {
+            box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.2);
         }
     </style>
 </head>
@@ -62,11 +58,8 @@
                     <a class="navbar-item has-text-white" onclick="loadPage('browse')">
                         <i class="fas fa-search mr-2"></i> Browse Auctions
                     </a>
-                    <a class="navbar-item has-text-white" onclick="loadPage('about')">
-                        <i class="fas fa-info-circle mr-2"></i> About
-                    </a>
-                    <a class="navbar-item has-text-white" onclick="loadPage('contact')">
-                        <i class="fas fa-envelope mr-2"></i> Contact
+                    <a class="navbar-item has-text-white" onclick="loadPage('create')">
+                        <i class="fas fa-plus-circle mr-2"></i> Create Listing
                     </a>
                 </div>
 
@@ -141,14 +134,6 @@
                         </div>
                     </div>
 
-                    <div class="field">
-                        <div class="control">
-                            <label class="checkbox">
-                                <input type="checkbox">
-                                I agree to the <a href="#">terms and conditions</a>
-                            </label>
-                        </div>
-                    </div>
                 </form>
             </section>
             <footer class="modal-card-foot">
@@ -187,19 +172,7 @@
                             </span>
                         </div>
                     </div>
-
-                    <div class="field">
-                        <div class="control">
-                            <label class="checkbox">
-                                <input type="checkbox">
-                                Remember me
-                            </label>
-                        </div>
-                    </div>
                 </form>
-                <p class="has-text-centered mt-4">
-                    <a href="#">Forgot password?</a>
-                </p>
             </section>
             <footer class="modal-card-foot">
                 <button class="button is-primary" type="submit">Sign In</button>
